modify views SignUp, AdminSignIn

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "simple-twitter-front-end",
+  "homepage": "https://Steavn-Chen.github.io/simple-twitter-front-end.git",
   "version": "0.1.0",
   "private": true,
   "scripts": {
